welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:9: error: value - is not a member of Boolean
		if (!(getX()==getMondeLargeur-1-)) {
                                               ^