welcome.lessons.welcome.traversal.line.TraversalByLine.scala.code
override def run() {
	var x:Int = 0
	def posFin():Boolean = {
		var b = false 
		if (getX() == getMondeHauteur()-1 && getY() == getMondeLargeur()-1) {b = true}
		return b
	}
	while (!posFin) {
		if (!(getX()==getMondeLargeur-1-)) {
			ecritMessage(x);
			setPos(getX()+1,getY());
			x=x+1;
		}
		if (estDosMur) {
			ecritMessage(x);
			setPos(0,getY()+1);
			x=x+1;
		}
	}
}
